--- a/app/views/lookbook/components/_nav_section.html.erb
+++ b/app/views/lookbook/components/_nav_section.html.erb
@@ -1,11 +1,13 @@
-<div x-data="navSection" <% if classes %> class="<%= classes %>"<% end %>>
-  <div class="flex items-center border-b border-gray-300 bg-gray-50"> 
-    <div class="flex items-center w-full cursor-pointer pl-3 pr-3 py-2 pt-2.5" @click="toggle">
+<div
+  x-data="navSection"
+  x-init="sections.push($data)"
+  class="flex flex-col min-h-0 relative <%= classes || "" %>">
+  <div class="flex items-center flex-none border-b border-gray-300 bg-gray-50"> 
+    <div class="flex items-center w-full px-4 py-2">
       <h2 class="font-bold text-gray-700 uppercase text-xs"><%= title %></h2>
-      <%= icon "${open ? 'chevron-down' : 'chevron-right'}", size: 3.5, class: "ml-auto text-gray-600" %>
     </div>
   </div>
-  <div :class="{hidden: !open}">
+  <div class="flex-grow pt-2 pb-3 overflow-y-auto">
     <%= yield %>
   </div>
 </div>
