--- a/app/views/lookbook/components/_nav.html.erb
+++ b/app/views/lookbook/components/_nav.html.erb
@@ -1,19 +1,16 @@
-<%
-entity ||= "preview"
-%>
 <nav id="nav" x-data="nav">
   <% if items.any? %>
     <ul x-ref="items">
-      <% items.each do |node| %>
-        <%= component "nav_#{node.type}", node: node %>
+      <% items.each do |item| %>
+        <%= component "nav_#{item.type}", node: item %>
       <% end %>
     </ul>
     <div class="p-4 text-center" x-show="empty" x-cloak>
-      <em class="text-gray-400 italic">No matching <%= entity.pluralize %> found.</em>
+      <em class="text-gray-400 italic">No matching <%= items.class.describe_as %> found.</em>
     </div>
   <% else %>
     <div class="p-4 text-center">
-      <h4 class="text-gray-400 italic">No <%= entity.pluralize %> found.</h4>
+      <h4 class="text-gray-400 italic">No <%= items.class.describe_as %> found.</h4>
     </div>
   <% end %>
 </nav>
