--- a/app/views/lookbook/components/_nav_preview.html.erb
+++ b/app/views/lookbook/components/_nav_preview.html.erb
@@ -1,4 +1,4 @@
-<% examples = node.get_examples.reject(&:hidden?) %>
+<% examples = node.examples.reject(&:hidden?) %>
 <% if examples.many? %>
   <%= component "nav_group", node: node, path: show_path(examples.first.path) do %>
     <% examples.each do |example| %>
