--- a/app/views/lookbook/components/_nav_section.html.erb
+++ b/app/views/lookbook/components/_nav_section.html.erb
@@ -1,7 +1,7 @@
 <div
   x-data="navSection"
   x-init="sections.push($data)"
-  class="flex flex-col min-h-0 relative <%= classes || "" %>">
+  class="flex flex-col min-h-[32px] relative <%= classes || "" %>">
   <div class="flex items-center flex-none border-b border-gray-300 bg-gray-50"> 
     <div class="flex items-center w-full px-4 py-2">
       <h2 class="font-bold text-gray-700 uppercase text-xs"><%= title %></h2>
