Page navigation improvements

--- a/app/assets/lookbook/css/app.css
+++ b/app/assets/lookbook/css/app.css
@@ -123,12 +123,8 @@
     @apply px-4;
   }
 
-  .prose > *:not(.not-prose) {
-    @apply max-w-3xl w-full mx-auto;
-  }
-
   .prose .embed {
-    @apply my-8 max-w-3xl mx-auto;
+    @apply my-8;
   }
 
   .resize-handle {
