--- a/app/views/layouts/lookbook/application.html.erb
+++ b/app/views/layouts/lookbook/application.html.erb
@@ -3,7 +3,8 @@
     id="app"
     x-data="app"
     :style="`grid-template-columns: ${$store.sidebar.width}px 1px 1fr;`"
-    @popstate.window="update"
+    @popstate.window="await update(); $dispatch('page:changed')"
+    @refresh.window="update"
     @resize.window="$store.layout.desktop = window.innerWidth >= $store.layout.desktopWidth"
     class="md:grid w-screen h-screen">
     <%= component "sidebar" %>
