Add landing page support

--- a/app/views/lookbook/components/_sidebar.html.erb
+++ b/app/views/lookbook/components/_sidebar.html.erb
@@ -37,7 +37,7 @@
     </div>
   <% else %>
     <div class="flex-grow overflow-y-auto unsectioned">
-      <%= component "nav", collection: Lookbook.previews.as_tree %>
+      <%= component "nav", items: Lookbook.previews.as_tree %>
     </div>
   <% end %>
 
