--- a/public/lookbook-assets/css/app.css
+++ b/public/lookbook-assets/css/app.css
@@ -975,16 +975,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   margin-top: 0.75rem;
 }.mb-10 {
   margin-bottom: 2.5rem;
-}.mt-10 {
-  margin-top: 2.5rem;
+}.mt-12 {
+  margin-top: 3rem;
 }.ml-2 {
   margin-left: 0.5rem;
 }.mr-2 {
   margin-right: 0.5rem;
 }.mb-4 {
   margin-bottom: 1rem;
-}.mt-12 {
-  margin-top: 3rem;
 }.block {
   display: block;
 }.inline-block {
@@ -1035,10 +1033,14 @@ Ensure the default browser behavior of the `hidden` attribute.
   width: 2.75rem;
 }.w-5 {
   width: 1.25rem;
+}.w-px {
+  width: 1px;
 }.min-w-0 {
   min-width: 0px;
 }.min-w-\[120px\] {
   min-width: 120px;
+}.min-w-full {
+  min-width: 100%;
 }.max-w-xs {
   max-width: 20rem;
 }.max-w-\[800px\] {
@@ -1260,8 +1262,6 @@ Ensure the default browser behavior of the `hidden` attribute.
   padding-top: 2rem;
 }.pb-10 {
   padding-bottom: 2.5rem;
-}.pt-6 {
-  padding-top: 1.5rem;
 }.pt-3 {
   padding-top: 0.75rem;
 }.pb-6 {
