--- a/app/views/lookbook/pages/show.html.erb
+++ b/app/views/lookbook/pages/show.html.erb
@@ -40,8 +40,8 @@
           <h1><%= @page.title %></h1>
         </header>
       <% end %>
-      <div id="page-main-<%= @page.id %>">
-        <div class="prose max-w-none prose-a:text-indigo-900">
+      <div id="page-main-<%= @page.id %>" data-morph-strategy="replace">
+        <div class="prose max-w-none prose-a:text-indigo-900" x-init="reloadIframes">
           <%= @page_content %>
         </div>
       </div>
